# crtsp

./: .gitignore  CMakeLists.txt  readme.md
app/: rtsp.cpp  rtsp.hpp
setup/rpi/: autorun.sh  build.sh  install.sh  labwcrun.sh  prepare.sh  uartenable.sh  udevrules.sh
setup/win/: gstreamer.ps1
src/: gst.hpp  json.hpp  log.hpp  meta.hpp  opts.hpp  utils.hpp  wrtc.hpp  wrtc.inl
